kubernetes/istio/virtual_services/istio_virtualservice_application.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application-virtualservice
  namespace: istio-ingress
spec:
  hosts:
  - "cats.yanivzl.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: capitolis-devops-demo-web-app-capitolis-devops-demo-webapp.default.svc.cluster.local
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
