kubernetes/istio/virtual_services/istio_virtualservice_argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: istio-ingress
spec:
  hosts:
  - "argocd.yanivzl.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server.argocd.svc.cluster.local
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
