kubernetes/istio/virtual_services/istio_virtualservice_jenkins.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-virtualservice
  namespace: istio-ingress
spec:
  hosts:
  - "jenkins.yanivzl.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
