kubernetes/istio/virtual_services/istio_virtualservice_kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-ingress
spec:
  hosts:
  - "kiali.yanivzl.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
    retries:
      attempts: 3
      perTryTimeout: 2s
